# LearningLetterPairs

./: .dockerignore  .env  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml  credentials.json  docker-compose.yml  mock.json
.github/: dependabot.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20230622055849_scheme.sql
backend/src/: api.rs  auth.rs  crypt.rs  lib.rs  main.rs  model.rs  route.rs
css/: add_style.css  common_style.css  create_account_style.css  list_style.css  login_style.css  lp_box.css  not_found_style.css  quiz_style.css  style.css  top_style.css
eriri/: Cargo.toml  Dockerfile
eriri/src/: app.rs  login.rs  main.rs  types.rs
eriri/src/components/: header.rs  mod.rs
frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html
frontend/css/: index.scss
frontend/src/: app.rs  login.rs  main.rs  top.rs  types.rs
frontend/src/components/: add.rs  card.rs  header.rs  mod.rs
script/: list.js  quiz.js
self-signed-certs/: cert.pem  key.pem
sql/: 1_create_db.sql  2_create_table.sql  create_db.sql  create_hiragana.sql  create_list.sql  insert_hiragana.sql
src/: add.rs  create.rs  crypt.rs  error.rs  index.rs  list.rs  login.rs  main.rs  quiz.rs  util.rs
templates/: add.html  create_account.html  index.html  list.html  login.html  not_found.html  quiz.html
utaha/: Cargo.toml  Dockerfile
utaha/migrations/: 20230622055849_scheme.sql
utaha/src/: api.rs  auth.rs  crypt.rs  main.rs
