[package]
name = "LearningLetterPairs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
askama = "0.11"
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls", "postgres" ] }
serde = "1.0"
