[package]
name = "LearningLetterPairs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-identity = "0.5"
actix-session = { version = "0.7", features = [ "cookie-session" ] }
actix-multipart = "0.4"
askama = "0.11"
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls", "postgres" ] }
serde = "1.0"
futures-util = "0.3"
once_cell = "1.12"
rand = "0.8"
