[package]
name = "learning_letter_pairs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-identity = "0.5"
actix-session = { version = "0.7", features = [ "cookie-session" ] }
actix-multipart = "0.6"
argon2 = "0.5"
askama = "0.12"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls", "postgres" ] }
serde = "1.0"
futures-util = "0.3"
once_cell = "1.17"
rand = "0.8"
regex = "1"
