[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.1"
axum = { version = "0.6.18", features = ["multipart"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
dotenv = "0.15.0"
http = "0.2.9"
image = "0.24.6"
jsonwebtoken = "8.3.0"
rust-s3 = "0.33.0"
serde = { version = "1.0.164", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "mysql"] }
tokio = { version = "1.28.2", features = ["full"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
