[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = "0.3.0"
log = "0.4.19"
serde = { version = "1.0.164", features = ["derive"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.64", features = ["EventTarget", "HtmlFormElement", "FormData", "HtmlInputElement"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17"
