[package]
name = "utaha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.7.5", features = ["multipart", "macros"] }
chrono = { version = "0.4.37", default-features = false, features = ["now"] }
dotenv = "0.15.0"
google-cloud-storage = "0.16.0"
http = "1.1.0"
image = "0.25.1"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "mysql"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
